--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,12 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-  font-family: "Pretendard", sans-serif;
-  word-break: keep-all;
+  @apply font-pretendard;
+  /* font-family: "Pretendard", sans-serif; */
+  /* word-break: keep-all; */
 }
 
 body {
