[기능] : 스크롤바 스타일 변경한다

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,3 +44,41 @@ body {
 
   --extreme-light: #1f1f1f;
 }
+
+@layer base {
+  * {
+    --scrollbar-size: 16px;
+    --scrollbar-size-min: 44px;
+    --scrollbar-color: var(--border);
+    /* firefox */
+    scrollbar-width: thin;
+    scrollbar-color: var(--scrollbar-color) transparent;
+  }
+
+  ::-webkit-scrollbar {
+    width: var(--scrollbar-size);
+    height: var(--scrollbar-size);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    min-height: var(--scrollbar-size-min);
+    min-width: var(--scrollbar-size-min);
+    background-color: var(--scrollbar-color);
+    border-radius: var(--scrollbar-size);
+    background-clip: padding-box;
+  }
+
+  ::-webkit-scrollbar-thumb:active {
+    --scrollbar-color: var(--border);
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-button,
+  ::-webkit-scrollbar-corner,
+  ::-webkit-resizer {
+    display: none;
+  }
+}
