[형식] : Post Detail Layout을 수정한다 (#23)
* [형식] : post header 레이아웃을 수정한다

* [기능] : intro animation 추가한다

* [형식] : PostDeatil를 컴포넌트로 구성한다

* [형식] : postDetail 로직 변경한다

* [형식] : background secondary 색상 변경한다

* [형식] : 직무연관도 레이아웃 변경한다

* [형식] : 직무연관도, 관련용어 레이아웃 수정한다

* [형식] : 레퍼런스 레이아웃 수정한다

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
 
 body {
   background-color: var(--background);
+  font-weight: 450;
 }
 
 :root {
@@ -35,7 +36,7 @@ body {
   --accent: #66a2b7;
 
   --background: #121212;
-  --background-secondary: #1e3a47;
+  --background-secondary: #10242c;
 
   --text: rgb(251, 251, 251);
   --text-secondary: rgb(190, 190, 190);
