--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,13 @@ body {
   --text: rgb(5, 5, 5);
   --text-secondary: rgb(24, 24, 24);
 
+  --gray0: rgb(100, 100, 100);
   --gray1: rgb(150, 150, 150);
+  --gray2: rgb(200, 200, 200);
+  --gray3: rgb(230, 230, 230);
+  --gray4: rgb(240, 240, 240);
+  --gray5: rgb(245, 245, 245);
+
   --border: #cccccc; /* 밝은 테마의 기본 테두리 색상 */
   --extreme-light: #efefef;
 
@@ -40,12 +46,18 @@ body {
   --accent: #66a2b7;
 
   --background: #121212;
-  --background-secondary: #10242c;
+  --background-secondary: #1e3e4b;
 
   --text: rgb(251, 251, 251);
   --text-secondary: rgb(226, 226, 226);
 
+  --gray0: rgb(200, 200, 200);
   --gray1: rgb(165, 165, 165);
+  --gray2: rgb(120, 120, 120);
+  --gray3: rgb(80, 80, 80);
+  --gray4: rgb(50, 50, 50);
+  --gray5: rgb(30, 30, 30);
+
   --border: #666666; /* 다크 테마의 기본 테두리 색상 */
   --extreme-light: #1f1f1f;
 
